# BallClock

./: README.md  pyproject.toml  setup.py
src/: ball_clock_runner.py
src/ball_clock/: __init__.py  ball.py  ball_repository.py  ball_slot.py  clock_control.py  five_minute_balls.py  hour_balls.py  minute_balls.py
src/ball_clock_gkgosney.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_ball_clock.py
